<resources>
    <string name="app_name">MobileShop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <array name="user_menu">
        <item>Menu</item>
        <item>Store</item>
        <item>Categories</item>
        <item>History</item>
        <item>News</item>
        <item>Detail</item>
        <item>About Us</item>
        <item>Sign Out</item>
        <item>Exit</item>
    </array>
    <array name="guest_menu">
        <item>Sign In</item>
        <item>Menu</item>
        <item>Store</item>
        <item>Categories</item>
        <item>News</item>
        <item>Detail</item>
        <item>About Us</item>
        <item>Exit</item>
    </array>

    <string name="recentProduct">Recent Products</string>
    <string name="highProduct">High Products</string>
    <string name="mediumProduct">Medium Products</string>
    <string name="lowProduct">Low Products</string>

    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="birthday">BirthDay</string>
    <string name="gender">Gender</string>
    <string name="more">More</string>

    <string name="user_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="title_activity_search">Search Products</string>
    <string name="action_settings">Settings</string>
    <string name="query_hint">Enter keyword</string>
    <string name="title_activity_about">About Us</string>

    <string name="contact">Địa chỉ: Số 1 Đại Cồ Việt.\nHotline:
        +84123456789\nEmail: mobileonline@gmail.com</string>
    <string name="slogan">Mobile Online - Di động cho mọi nhà</string>
    <string name="term">Sàn giao dịch điện tử MobileOnline.com do công ty Cổ Phần Thế Giới Di Động (“Công ty”) thực hiện hoạt động và vận hành. Thành viên trên sàn giao dịch điện tử là các cửa hàng, tổ chức cá nhân có hoạt động thương mại hợp pháp được MobileOnline.com cho phép sử dụng dịch vụ do sàn giao dịch điện tử MobileOnline.com cung cấp.

Nguyên tắc này áp dụng cho các thành viên đăng ký sử dụng, đăng tin giới thiệu và bán sản phẩm được thực hiện trên Sàn giao dịch Thương mại điện tử MobileOnline.com.

Các cửa hàng, tổ chức, cá nhân tham gia giao dịch tại Sàn Giao dịch thương mại điện tử MobileOnline.com tự do thỏa thuận trên cơ sở tôn trọng quyền và lợi ích hợp pháp của các bên tham gia hoạt động mua bán sản phẩm theo thoả thuận của các bên, không trái với qui định của pháp luật.

Sản phẩm tham gia giao dịch trên Sàn giao dịch thương mại điện tử MobileOnline.com  phải đáp ứng đầy đủ các quy định của pháp luật có liên quan, không thuộc các trường hợp cấm kinh doanh, cấm quảng cáo theo quy định của pháp luật.
    </string>

    <string name="manufacture">All</string>
    <string name="bestseller">Best Seller</string>
    <string name="saleoff">Sale Off</string>
    <string name="oldproduct">Old Product</string>
    <string-array name="categoriesTab">
        <item>All</item>
        <item>Best Seller</item>
        <item>Sale Off</item>
        <item>Old Product</item>
    </string-array>

    <string name="google_map_key">AIzaSyBwJNtKa4OjhWsqM46m0WIoIlFkni1wnS8</string>
    <string name="done">Done</string>
    <string name="progress">Progress</string>
    <string name="abort">Abort</string>
    <string name="quantity">Quantity: </string>
    <string name="addToCartBtn">Added to cart</string>
    <string name="removeFromCartBtn">REMOVE FROM CART</string>

    <string name="deleteCartItem">Remove this from cart?</string>
    <string name="deleteHistoryOrderItem">Remove this history order?</string>
</resources>
